@@ -4,6 +4,8 @@
 
 * bin/fswiki2md: add new line after header
 * bugfix for new line at the end of the stream
+* Enable to use not String in the matrix for Tefil::ColumnFormer.form
+* bugfix for bin/md2fswiki
 
 
 == Version 0.1.4 [2017-05-31] released
